AWX/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  annotations:
          # cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress-class: traefik
    # traefik.ingress.kubernetes.io/router.middlewares: monitoring-k3s-redirect-https@kubernetescrd
spec:
  tls:
  - hosts:
    - awx.mytestlab.site
    secretName: awx-tls-secret
  rules:
  - host: awx.mytestlab.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: awx-service
            port:
              number: 80
